--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 * {
-    border: 2px solid red ;
+    border: 0.1px solid red ;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
 
+
 .square_div {
-    width: 53px;
-    height: 53px;
+   width: 52px;
+   height: 52px;
 }
 
 
@@ -14,4 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
+    width: 99%
+    margin: auto;
+    
 }
